@@ -24,7 +24,7 @@
  */
 package jdk.incubator.vector;
 
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 
 import java.nio.ByteOrder;
 import java.util.Arrays;
@@ -92,7 +92,7 @@ import java.util.Arrays;
  * Other lane-wise operations, such as the {@code min} operator, are defined as a
  * partially serviced (not a full-service) named operation, where a corresponding
  * method on {@code Vector} and/or a subclass provide some but all possible
- * overloadings and overrides (commonly the unmasked varient with scalar-broadcast
+ * overloadings and overrides (commonly the unmasked variant with scalar-broadcast
  * overloadings).
  *
  * Finally, all lane-wise operations (those named as previously described,
@@ -687,7 +687,7 @@ import java.util.Arrays;
  * because it is relatively rare to find algorithms where, given two
  * adjacent vector lanes, one lane is somehow more arithmetically
  * significant than its neighbor, and even in those cases, there is no
- * general way to know which neighbor is the the more significant.
+ * general way to know which neighbor is the more significant.
  *
  * <p> Putting the terms together, we view the information structure
  * of a vector as a temporal sequence of lanes ("first", "next",
@@ -764,7 +764,7 @@ import java.util.Arrays;
  * first vector lane value occupies the first position in memory, and so on,
  * up to the length of the vector. Further, the memory order of stored
  * vector lanes corresponds to increasing index values in a Java array or
- * in a {@link jdk.incubator.foreign.MemorySegment}.
+ * in a {@link java.lang.foreign.MemorySegment}.
  *
  * <p> Byte order for lane storage is chosen such that the stored
  * vector values can be read or written as single primitive values,
@@ -2259,7 +2259,7 @@ public abstract class Vector<E> extends jdk.internal.vm.vector.VectorSupport.Vec
      * <p> The scale must not be so large, and the element size must
      * not be so small, that that there would be an overflow when
      * computing any of the {@code N*scale} or {@code VLENGTH*scale},
-     * when the the result is represented using the vector
+     * when the result is represented using the vector
      * lane type {@code ETYPE}.
      *
      * <p>
@@ -2449,7 +2449,7 @@ public abstract class Vector<E> extends jdk.internal.vm.vector.VectorSupport.Vec
      *
      * @param origin the first input lane to transfer into the slice
      * @return the last {@code VLENGTH-origin} input lanes,
-     *         placed starting in the first lane of the ouput,
+     *         placed starting in the first lane of the output,
      *         padded at the end with zeroes
      * @throws ArrayIndexOutOfBoundsException if {@code origin}
      *         is negative or greater than {@code VLENGTH}
@@ -2956,8 +2956,8 @@ public abstract class Vector<E> extends jdk.internal.vm.vector.VectorSupport.Vec
      *
      * @return a {@code ByteVector} with the same shape and information content
      * @see Vector#reinterpretShape(VectorSpecies,int)
-     * @see IntVector#intoMemorySegment(jdk.incubator.foreign.MemorySegment, long, java.nio.ByteOrder)
-     * @see FloatVector#intoMemorySegment(jdk.incubator.foreign.MemorySegment, long, java.nio.ByteOrder)
+     * @see IntVector#intoMemorySegment(java.lang.foreign.MemorySegment, long, java.nio.ByteOrder)
+     * @see FloatVector#intoMemorySegment(java.lang.foreign.MemorySegment, long, java.nio.ByteOrder)
      * @see VectorSpecies#withLanes(Class)
      */
     public abstract ByteVector reinterpretAsBytes();
